src/test/deca/context/invalid/created/return/return_a_b.deca
// Description :
//    return mauvais type : B, demandé A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 14:  (2.7) Type de retour effectif : B, déclaré : A

class A{}

class B{}

class c{
A met(){
	B b = new B();
	return b; 
}
}